kustomize/overlay/newMusaEnv38/Musa-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: Musa
  labels:
    environmentId: env_229019a7-9764-42b7-b2ca-cabc42eec91b
    projectId: project_e045038e-659d-446f-80a4-9ea25944f637
    projectName: newmusatestproject
    environmentName: newmusaenv38
    organizationId: org_214f8824-489e-4427-b043-83252b36ac2b
    goldilocks.fairwinds.com/enabled: 'true'
